--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </script>
 
   <div id="url-github">
-    <p><a href="https://github.com/BYU-CS-260-Winter-2021/lab-2-weather-app-AdamPAllred"> https://github.com/BYU-CS-260-Winter-2021/lab-2-weather-app-AdamPAllred</a></p>
+    <p><a href="https://github.com/AdamPAllred/creativeProject2"> GitHub URL link</a></p>
   </div>
 </body>
 
